tests/neg/i5041.scala
case class i1()extends Any // error: Any does not have a constructor
